# entity-sync-example-game

./: README.md  start.sh
client/: Cargo.toml
client/src/: main.rs  systems.rs
server/: Cargo.toml
server/src/: change_filter.rs  main.rs  systems.rs
shared/: Cargo.toml
shared/src/: lib.rs  message.rs  systems.rs
shared/src/components/: mod.rs
