[package]
name = "server"
version = "0.1.0"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.5.0"
log = "0.4.8"
track = { path = "../../track" }
crossterm = "0.16.0"
legion = { version = "0.2.1", git = "https://github.com/TimonPost/legion.git", branch = "clone_merge_merge" }

net-sync = { path =  "../../net-sync" }
legion-sync = { path = "../../legion-sync"}
bit-set = "0.5.1"

shared = { path = "../shared" }
bincode = "1.2.1"
serde-diff="0.2.0"