[package]
name = "server"
version = "0.1.0"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple_logger = "1.5.0"
log = "0.4.8"
legion = { version = "0.2.1", branch = "master", path = "../../../legion", default-features=false}
net-sync = { path =  "../../net-sync" }
legion-sync = { path = "../../legion-sync"}
bit-set = "0.5.1"

shared = { path = "../shared" }
bincode = "1.2.1"
serde-diff="0.2.0"

sdl2 = {version = "0.34.0", features=["gfx", "ttf"] }
find_folder = "0.3.0"