[package]
name = "shared"
version = "0.1.0"
authors = ["Timon Post <timonpost@hotmail.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
track = { path = "../../track"}
serde = "1"
crossbeam-channel = "0.4.0"
uuid = { version = "0.8.1", features=["serde", "v4"] }
crossterm = "0.16.0"
legion-sync = { path = "../../legion-sync"}
legion = { version = "0.2.1",  branch = "clone_move", path = "../../../legion"}